<resources>
    <string name="app_name">Gestor de Produção</string>
    <string name="string_desfazer">Desfacer</string>
    <string name="personagens">Personagens</string>
    <string name="sair">Sair</string>
    <string name="estoque">Estoque</string>
    <string name="trabalhos">Trabalhos</string>
    <string name="cadastrar_novo_trabalho">Cadastrar novo trabalho</string>
    <string-array name="raridades">
        <item>@string/stringComum</item>
        <item>@string/stringMelhorado</item>
        <item>@string/stringRaro</item>
        <item>@string/stringEspecial</item>
    </string-array>
    <string-array name="estados">
        <item>Produzir</item>
        <item>Produzindo</item>
        <item>Concluido</item>
    </string-array>
    <string-array name="licencas">
        <item>Licença do Iniciante</item>
        <item>Licença do Mestre</item>
        <item>Licença do Aprendiz</item>
        <item>Licença do Novato</item>
    </string-array>
    <string name="licencaIniciante">Licença de Artesanato de Iniciante</string>
    <string name="licencaMestre">Licença de Artesanato de Mestre</string>
    <string name="licencaAprendiz">Licença de Artesanato de Aprendiz</string>
    <string name="licencaNovato">Licença de Artesanato de Novato</string>
    <string-array name="licencas_completas">
        <item>@string/licencaIniciante</item>
        <item>@string/licencaMestre</item>
        <item>@string/licencaAprendiz</item>
        <item>@string/licencaNovato</item>
    </string-array>
    <string name="profissoes">Profissões</string>
    <string name="stringProfissaoArmaLongoAlcance">Armas de Longo Alcance</string>
    <string name="stringProfissaoArmasCorpoCorpo">Armas Corpo a Corpo</string>
    <string name="stringProfissaoArmaduraTecido">Armaduras de Tecido</string>
    <string name="stringProfissaoArmaduraLeve">Armaduras Leves</string>
    <string name="stringProfissaoArmaduraPesada">Armaduras Pesadas</string>
    <string name="stringProfissaoAneis">Anéis</string>
    <string name="stringProfissaoAmuletos">Amuletos</string>
    <string name="stringProfissaoBraceletes">Braceletes</string>
    <string name="stringProfissaoCapotes">Capotes</string>
    <string-array name="quantidade">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="producaoRecursos">
        <item>melhorarlicencacomum</item>
        <item>licençadeproducaodoaprendiz</item>
        <item>grandecolecaoderecursoscomuns</item>
        <item>grandecolecaoderecursosavancados</item>
        <item>coletaemmassaderecursosavancados</item>
        <item>melhoriadaessenciacomum</item>
        <item>melhoriadasubstanciacomum</item>
        <item>melhoriadocatalizadorcomum</item>
        <item>melhoriadaessênciacomposta</item>
        <item>melhoriadasubtanciacomposta</item>
        <item>melhoriadocatalizadoramplificado</item>
        <item>criaresferadoaprendiz</item>
        <item>produzindoavarinhademadeira</item>
        <item>produzindocabecadocajadodejade</item>
        <item>produzindocabecadecajadodeonix</item>
        <item>criaresferadoneofito</item>
        <item>produzindoavarinhadeaço</item>
        <item>extracaodelascas</item>
        <item>manipulacaodelascas</item>
        <item>fazermodoaprendiz</item>
        <item>preparandolascasdequartzo</item>
        <item>manipulacaodemineriodecobre</item>
        <item>fazermodoprincipiante</item>
        <item>adquirirtesouradoaprendiz</item>
        <item>produzindofioresistente</item>
        <item>fazendotecidodelinho</item>
        <item>fazendotecidodecetim</item>
        <item>comprartesouradoprincipiante</item>
        <item>produzindofiogrosso</item>
        <item>adquirirfacadoaprendiz</item>
        <item>recebendoescamasdaserpente</item>
        <item>concluindocouroresistente</item>
        <item>adquirirfacadoprincipiante</item>
        <item>recebendoescamasdolagarto</item>
        <item>curtindocourogrosso</item>
        <item>adquirirmarretaodoaprendiz</item>
        <item>forjandoplacasdecobre</item>
        <item>fazendoplacasdebronze</item>
        <item>adquirirmarretaodoprincipiante</item>
        <item>forjandoplacasdeferro</item>
        <item>fazendoaneisdeaco</item>
        <item>adquirirmoldedoaprendiz</item>
        <item>extracaodepepitasdecobre</item>
        <item>recebendogemadassombras</item>
        <item>adquirirmoldedoprincipiante</item>
        <item>extracaodepepitasdeprata</item>
        <item>recebendogemadaluz</item>
        <item>adquirirpincadoaprendiz</item>
        <item>extracaodejadebruta</item>
        <item>recebendoenergiainicial</item>
        <item>adquirirpinçasdoprincipiante</item>
        <item>extracaodeonixextraordinaria</item>
        <item>recebendoeterinicial</item>
        <item>adquirirfuradordoaprendiz</item>
        <item>produzindotecidodelicado</item>
        <item>extracaodesubstanciainstável</item>
        <item>adquirirfuradordoprincipiante</item>
        <item>produzindotecidodenso</item>
        <item>extracaodesubstanciaestável</item>
        <item>recebendofibradebronze</item>
        <item>recebendoprata</item>
        <item>recebendoinsigniadeestudante</item>
        <item>recebendofibradeplatina</item>
        <item>recebendoambar</item>
        <item>recebendodistintivodeaprendiz</item>
    </string-array>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="string_ola">Olá</string>
    <string name="string_entre_em_sua_conta">Entre em sua conta</string>
    <string name="string_nome">Nome</string>
    <string name="string_email">Email</string>
    <string name="string_senha">Senha</string>
    <string name="string_esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="string_entrar">Entrar</string>
    <string name="string_nao_possui_uma_conta">Não possui uma conta?</string>
    <string name="string_cadastre_se"><u>Cadastre-se</u></string>
    <string name="stringCasoChaMa">(.*[A-Z].*)</string>
    <string name="stringCasoCharMi">(.*[a-z].*)</string>
    <string name="stringCasoCharNum">(.*\d.*)</string>
    <string name="stringCasoCharS">(.*[@,#,$,%].*$)</string>
    <string name="string_senha_curta">Senha muito curta.</string>
    <string name="string_senha_numerica">Senha deve conter ao menos um número.</string>
    <string name="string_senha_minuscula">Senha deve conter ao menos uma letra minúscula.</string>
    <string name="string_senha_maiuscula">Senha deve conter ao menos uma letra maiúscula.</string>
    <string name="string_senha_especial">Senha deve conter ao menos um caracter especial.</string>
    <string name="string_entre"><u>Entre</u></string>
    <string name="stringAtivo">Ativo</string>
    <string name="stringInativo">Inativo</string>
    <string name="stringCarregandoDados">Carregando dados…</string>
    <string name="abre_menu_navegacao">Abre menu de navegação</string>
    <string name="fecha_menu_navegacao">Fecha menu de navegação</string>
    <string name="string_espaco_producao">Espaço para produção</string>
    <string name="string_estado">Estado</string>
    <string name="string_uso">Uso</string>
    <string name="stringConfiguracoes">Configurações</string>
    <string name="stringNovoPersonagem">Novo personagem</string>
    <string name="stringRecorrente">Recorrente</string>
    <string name="stringExperiencia">Experiência</string>
    <string name="stringProfissoes">Profissões</string>
    <string name="stringNivel">Nível</string>
    <string name="stringQuantidade">Quantidade</string>
    <string name="stringRaridade">Raridade</string>
    <string name="stringTrabalhoNecessario">Trabalho necessário</string>
    <string name="stringLicenca">Licença</string>
    <string name="stringImagemDoTrabalhoDesejado">Imagem do trabalho desejado</string>
    <string name="stringAdicionar">Adicionar</string>
    <string name="stringUm">1</string>
    <string name="stringNovoTrabalho">Novo trabalho</string>
    <string name="stringTodos">Todos</string>
    <string name="stringProduzir">Produzir</string>
    <string name="stringProduzindo">Produzindo</string>
    <string name="stringPronto">Pronto</string>
    <string name="stringDesfazer">Desfazer</string>
    <string name="stringVendas">Vendas</string>
    <string name="stringExcluir">Excluir</string>
    <string name="stringExperienciaValor">Experiência %1$d</string>
    <string name="stringNivelValor">Nv. %1$d</string>
    <string name="stringOuroValor">$ %1$s</string>
    <string name="stringQuantidadeValor">x %1$d</string>
    <string name="stringQuantidadeUndidade">%1$s und</string>
    <string name="stringEstadoValor">Estado: %1$s</string>
    <string name="stringUsoValor">Uso: %1$s</string>
    <string name="stringAutoProducaoValor">Auto produção: %1$s</string>
    <string name="stringEspacoProducaoValor">Espaço para produção: %1$d</string>
    <string name="stringTaxaLucroValor">%d%%</string>
    <string name="stringValorProducaoValor">%1$d ouros</string>
    <string name="stringValorLucroValor">%1$d ouros</string>
    <string name="teste">teste</string>
    <string name="stringPrioridade">Prioridade</string>
    <string name="stringListaVazia">Lista vazia</string>
    <string name="stringNomeProducao">Nome produção</string>
    <string name="stringProducao">Produção</string>
    <string name="stringAutoProducao">Auto produção</string>
    <string name="stringBusca">Buscar</string>
    <string name="stringImagemIndiceConteudoExpandido">Imagem indice de conteúdo expandido</string>
    <string name="string_nao_encontrado">Não encontrado</string>
    <string name="stringEspecial">Especial</string>
    <string name="stringMelhorado">Melhorado</string>
    <string name="stringRaro">Raro</string>
    <string name="stringComum">Comum</string>
    <string name="stringNadaEncontrado">Nada encontrado</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stringDescricao">Descrição</string>
    <string name="stringData">Data</string>
    <string name="stringValor">Valor</string>
    <string name="stringValorProducao">Valor de produção</string>
    <string name="stringTaxaLucro">Taxa de lucro (%)</string>
    <string name="stringValorLucro">Valor com lucro</string>
    <string name="stringIndefinido">Indefinido</string>
    <string name="stringSubstanciaComum">Substância comum</string>
    <string name="stringSubstanciaComposta">Substância composta</string>
    <string name="stringSubstanciaEnergia">Substância energética</string>
    <string name="stringSubstanciaEterea">Substância etérea</string>
    <string name="stringEssenciaComum">Essência comum</string>
    <string name="stringEssenciaComposta">Essência composta</string>
    <string name="stringEssenciaEnergia">Essência de energia</string>
    <string name="stringEssenciaEterea">Essência etérea</string>
    <string name="stringCatalisadorComum">Catalisador comum</string>
    <string name="stringCatalisadorComposto">Catalisador amplificado</string>
    <string name="stringCatalisadorEnergia">Catalisador de energia</string>
    <string name="stringCatalisadorEtereo">Catalisador Etéreo</string>
    <string name="stringCampoRequerido">Campo requerido!</string>
    <string name="strngValorInvalido">Valor inválido!</string>
    <string name="stringSelecioneTrabalho">Selecione um trabalho</string>
    <string name="stringRecursos">Recursos</string>
    <string name="stringEtereo">Etéreo</string>
    <string name="stringEnergia">Energia</string>
    <string name="stringComposto">Composto</string>
    <string name="stringConfirmar">Confirmar</string>
    <string name="stringDadosDoPersonagem">Dados do Personagem</string>
</resources>