<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="">

    <group
        android:checkableBehavior="single"
        android:id="@+id/grupo1">
        <item
            android:id="@+id/nav_lista_personagem"
            android:actionLayout="@layout/item_lista_personagens"
            android:title="Lista personagens"
            app:showAsAction="ifRoom|collapseActionView">
            <menu></menu>
        </item>
        <item
            android:id="@+id/nav_trabalhos"
            android:title="@string/trabalhos"/>
        <item
            android:id="@+id/nav_estoque"
            android:title="@string/estoque"/>
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/grupo2">
        <item
            android:id="@+id/nav_sair"
            android:title="@string/sair"/>
    </group>

</menu>