<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background"
        android:padding="24dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/footer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/txtTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/TextAppearance.Material3.HeadlineMedium"
                    android:text="@string/string_ola" />

                <TextView
                    android:id="@+id/txtSubTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:text="@string/string_entre_em_sua_conta"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="30" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtSenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_senha"
                        android:inputType="textPassword"
                        android:maxLength="20"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txtEsqueceuSenha"
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="end"
                    android:text="@string/string_esqueceu_sua_senha"
                    android:textSize="17sp"
                    android:textColor="?attr/colorPrimary"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/botaoEntrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_entrar"
                    android:layout_marginTop="24dp"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardLogin">

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/string_nao_possui_uma_conta" />

            <TextView
                android:id="@+id/txtLinkCadastro"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/string_cadastre_se"
                android:textColor="@color/cor_azul_claro" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>